# rrspotipy

./: .gitignore  README.md  convert_audio.py  pyproject.toml  requirements.txt  rrsp_k7.ipynb  rrsp_k7.py  rrsp_pairc.py  rrsp_player.py  todo.md
examples/: 01playlist.py  02player.py  03todir.py  04download.py
p515/: change_frame_rate.py  convert_audio_pydube.py  convert_playlist.py  limit_pathsize.py
sandbox/: pydub_test.py  pygame_test.ipynb  soundtest.ipynb  soundtest.py
src/rrspotipy/: __init__.py
